# HomeSpeak

./: .gitignore
client/HomeSpeakClient/: DesktopApp1.sln  HomeSpeak Client.sln  README.md  SendMessage.cs
client/HomeSpeakClient/DesktopApp1/: DesktopApp1.csproj  DesktopApp1.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  GuiManager.cs  IpconnectionData.cs  LoginData.cs  LoginDataReplay.cs  LoginForm.resx  Message.cs  MessageCollection.cs  Messages.cs  Program.cs  ReadedMessage.cs  TcpConnection.cs
client/HomeSpeakClient/DesktopApp1/Properties/: AssemblyInfo.cs
server/: CMakeLists.txt  core.cpp  core.h  dbmanager.cpp  dbmanager.h  handlecommunication.cpp  handlecommunication.h  jsonparser.cpp  jsonparser.h  logger.cpp  logger.h  loglevels.h  main.cpp  messagetypes.h  tcpserver.cpp  tcpserver.h  tcpserverthread.cpp  tcpserverthread.h
